src/tp/tp2Parser.java
// Generated from /home/mauro/Software/TC/TP1/src/tp/tp2.g4 by ANTLR 4.5.3
package tp;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class tp2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, WS=3, OBRACE=4, CBRACE=5, OBRACKET=6, CBRACKET=7, SCOLON=8, 
		COMMA=9, ASSIGN=10, SUMOP=11, MULTOP=12, MOD=13, INCREMENT=14, DECREMENT=15, 
		PLASSIGN=16, MINASSIGN=17, MULTASSIGN=18, DIVASSIGN=19, MODASSIGN=20, 
		COMPOP=21, LOGICOP=22, NOT=23, OR=24, AND=25, TYPE=26, T_DOUBLE=27, T_FLOAT=28, 
		T_INT=29, T_CHAR=30, T_VOID=31, IF=32, ELSE=33, DO=34, WHILE=35, FOR=36, 
		BREAK=37, CONTINUE=38, RETURN=39, SWITCH=40, CASE=41, DEFAULT=42, INT=43, 
		FLOAT=44, ID=45, CHAR=46;
	public static final int
		RULE_program = 0, RULE_rec_instruc = 1, RULE_instruc = 2, RULE_sentence = 3, 
		RULE_block = 4, RULE_baseexp = 5, RULE_exp = 6, RULE_assign = 7, RULE_ret = 8, 
		RULE_func_def = 9, RULE_func_def_param = 10, RULE_func_prot = 11, RULE_func_prot_param = 12, 
		RULE_func_call = 13, RULE_func_call_param = 14, RULE_declare = 15, RULE_dec_comma = 16, 
		RULE_cond = 17, RULE_elcond = 18, RULE_forloop = 19, RULE_whileloop = 20;
	public static final String[] ruleNames = {
		"program", "rec_instruc", "instruc", "sentence", "block", "baseexp", "exp", 
		"assign", "ret", "func_def", "func_def_param", "func_prot", "func_prot_param", 
		"func_call", "func_call_param", "declare", "dec_comma", "cond", "elcond", 
		"forloop", "whileloop"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", null, "'{'", "'}'", "'['", "']'", "';'", "','", "'='", 
		null, null, "'%'", "'++'", "'--'", "'+='", "'-='", "'*='", "'/='", "'%='", 
		null, null, "'!'", "'||'", "'&&'", null, "'double'", "'float'", "'int'", 
		"'char'", "'void'", "'if'", "'else'", "'do'", "'while'", "'for'", "'break'", 
		"'continue'", "'return'", "'switch'", "'case'", "'default'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "WS", "OBRACE", "CBRACE", "OBRACKET", "CBRACKET", "SCOLON", 
		"COMMA", "ASSIGN", "SUMOP", "MULTOP", "MOD", "INCREMENT", "DECREMENT", 
		"PLASSIGN", "MINASSIGN", "MULTASSIGN", "DIVASSIGN", "MODASSIGN", "COMPOP", 
		"LOGICOP", "NOT", "OR", "AND", "TYPE", "T_DOUBLE", "T_FLOAT", "T_INT", 
		"T_CHAR", "T_VOID", "IF", "ELSE", "DO", "WHILE", "FOR", "BREAK", "CONTINUE", 
		"RETURN", "SWITCH", "CASE", "DEFAULT", "INT", "FLOAT", "ID", "CHAR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tp2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public tp2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends EvaluableParserRuleContext {
		public Rec_instrucContext rec_instruc() {
			return getRuleContext(Rec_instrucContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tp2Visitor ) return ((tp2Visitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			rec_instruc();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rec_instrucContext extends EvaluableParserRuleContext {
		public InstrucContext instruc() {
			return getRuleContext(InstrucContext.class,0);
		}
		public Rec_instrucContext rec_instruc() {
			return getRuleContext(Rec_instrucContext.class,0);
		}
		public Rec_instrucContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rec_instruc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).enterRec_instruc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).exitRec_instruc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tp2Visitor ) return ((tp2Visitor<? extends T>)visitor).visitRec_instruc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rec_instrucContext rec_instruc() throws RecognitionException {
		Rec_instrucContext _localctx = new Rec_instrucContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_rec_instruc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			instruc();
			setState(46);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << OBRACE) | (1L << SCOLON) | (1L << NOT) | (1L << TYPE) | (1L << T_VOID) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << BREAK) | (1L << CONTINUE) | (1L << INT) | (1L << FLOAT) | (1L << ID) | (1L << CHAR))) != 0)) {
				{
				setState(45);
				rec_instruc();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstrucContext extends EvaluableParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ForloopContext forloop() {
			return getRuleContext(ForloopContext.class,0);
		}
		public WhileloopContext whileloop() {
			return getRuleContext(WhileloopContext.class,0);
		}
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public Func_protContext func_prot() {
			return getRuleContext(Func_protContext.class,0);
		}
		public Func_defContext func_def() {
			return getRuleContext(Func_defContext.class,0);
		}
		public SentenceContext sentence() {
			return getRuleContext(SentenceContext.class,0);
		}
		public TerminalNode SCOLON() { return getToken(tp2Parser.SCOLON, 0); }
		public InstrucContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).enterInstruc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).exitInstruc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tp2Visitor ) return ((tp2Visitor<? extends T>)visitor).visitInstruc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstrucContext instruc() throws RecognitionException {
		InstrucContext _localctx = new InstrucContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruc);
		try {
			setState(59);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				block();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				forloop();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(50);
				whileloop();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(51);
				cond();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(52);
				func_prot();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(53);
				func_def();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(54);
				sentence();
				setState(56);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(55);
					match(SCOLON);
					}
					break;
				}
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(58);
				match(SCOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends EvaluableParserRuleContext {
		public DeclareContext declare() {
			return getRuleContext(DeclareContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public TerminalNode BREAK() { return getToken(tp2Parser.BREAK, 0); }
		public TerminalNode CONTINUE() { return getToken(tp2Parser.CONTINUE, 0); }
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).exitSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tp2Visitor ) return ((tp2Visitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
                
                @Override
                public String eval(ThreeAddressCode code, boolean function){
                    if(BREAK() != null){
                        code.addCode("JMP "+code.getBreakLabel(), null, function);
                        return null;
                    }
                    else if(CONTINUE() != null){
                        code.addCode("JMP "+code.getContinueLabel(), null, function);
                        return null;
                    }
                    else{
                        return super.eval(code, function);
                    }
                }
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sentence);
		try {
			setState(66);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				declare();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				exp(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				assign();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(64);
				match(BREAK);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(65);
				match(CONTINUE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends EvaluableParserRuleContext {
		public TerminalNode OBRACE() { return getToken(tp2Parser.OBRACE, 0); }
		public Rec_instrucContext rec_instruc() {
			return getRuleContext(Rec_instrucContext.class,0);
		}
		public TerminalNode CBRACE() { return getToken(tp2Parser.CBRACE, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tp2Visitor ) return ((tp2Visitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(OBRACE);
			setState(69);
			rec_instruc();
			setState(70);
			match(CBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BaseexpContext extends EvaluableParserRuleContext {
		public Func_callContext func_call() {
			return getRuleContext(Func_callContext.class,0);
		}
		public TerminalNode INT() { return getToken(tp2Parser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(tp2Parser.FLOAT, 0); }
		public TerminalNode ID() { return getToken(tp2Parser.ID, 0); }
		public TerminalNode CHAR() { return getToken(tp2Parser.CHAR, 0); }
		public BaseexpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_baseexp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).enterBaseexp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).exitBaseexp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tp2Visitor ) return ((tp2Visitor<? extends T>)visitor).visitBaseexp(this);
			else return visitor.visitChildren(this);
		}
                
                @Override
                public String eval(ThreeAddressCode code, boolean function){
                     if(func_call() != null){
                         return func_call().eval(code, function);
                     }
                     return (ID()!=null?"_":"")+getText();
                }

	}

	public final BaseexpContext baseexp() throws RecognitionException {
		BaseexpContext _localctx = new BaseexpContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_baseexp);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				func_call();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				match(INT);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				match(FLOAT);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(75);
				match(ID);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(76);
				match(CHAR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends EvaluableParserRuleContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public BaseexpContext baseexp() {
			return getRuleContext(BaseexpContext.class,0);
		}
		public TerminalNode NOT() { return getToken(tp2Parser.NOT, 0); }
		public TerminalNode MULTOP() { return getToken(tp2Parser.MULTOP, 0); }
		public TerminalNode SUMOP() { return getToken(tp2Parser.SUMOP, 0); }
		public TerminalNode COMPOP() { return getToken(tp2Parser.COMPOP, 0); }
		public TerminalNode LOGICOP() { return getToken(tp2Parser.LOGICOP, 0); }
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).enterExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).exitExp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tp2Visitor ) return ((tp2Visitor<? extends T>)visitor).visitExp(this);
			else return visitor.visitChildren(this);
		}
                
                @Override
                public String eval (ThreeAddressCode code, boolean function){
                    if(this.baseexp() != null) return this.baseexp().eval(code, function);
                    if(this.exp().size()==1){
                        if(NOT()!= null){
                            return("NOT "+exp(0).eval(code, function));
                        }
                        else{
                            return this.exp(0).eval(code, function);
                        }
                    }
                    else{
                        String result = code.getContext().getNextVarName();
                        String operator;
                        if(MULTOP()!= null) operator = MULTOP().getText();
                        else if(SUMOP()!= null) operator = SUMOP().getText();
                        else if(COMPOP()!= null) operator = COMPOP().getText();
                        else operator = LOGICOP().getText();
                        code.addCode(this.exp(0).eval(code, function)+ operator + this.exp(1).eval(code, function), result, function);
                        return result;
                    }
                }
                      
	}

	public final ExpContext exp() throws RecognitionException {
		return exp(0);
	}

	private ExpContext exp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpContext _localctx = new ExpContext(_ctx, _parentState);
		ExpContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_exp, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(80);
				match(T__0);
				setState(81);
				exp(0);
				setState(82);
				match(T__1);
				}
				break;
			case INT:
			case FLOAT:
			case ID:
			case CHAR:
				{
				setState(84);
				baseexp();
				}
				break;
			case NOT:
				{
				setState(85);
				match(NOT);
				setState(86);
				exp(1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(103);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(101);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						_localctx = new ExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(89);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(90);
						match(MULTOP);
						setState(91);
						exp(6);
						}
						break;
					case 2:
						{
						_localctx = new ExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(92);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(93);
						match(SUMOP);
						setState(94);
						exp(5);
						}
						break;
					case 3:
						{
						_localctx = new ExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(95);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(96);
						match(COMPOP);
						setState(97);
						exp(4);
						}
						break;
					case 4:
						{
						_localctx = new ExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(98);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(99);
						match(LOGICOP);
						setState(100);
						exp(3);
						}
						break;
					}
					} 
				}
				setState(105);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class AssignContext extends EvaluableParserRuleContext {
		public TerminalNode ID() { return getToken(tp2Parser.ID, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(tp2Parser.ASSIGN, 0); }
		public TerminalNode PLASSIGN() { return getToken(tp2Parser.PLASSIGN, 0); }
		public TerminalNode MINASSIGN() { return getToken(tp2Parser.MINASSIGN, 0); }
		public TerminalNode MULTASSIGN() { return getToken(tp2Parser.MULTASSIGN, 0); }
		public TerminalNode DIVASSIGN() { return getToken(tp2Parser.DIVASSIGN, 0); }
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).exitAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tp2Visitor ) return ((tp2Visitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
                @Override
                public String eval(ThreeAddressCode code, boolean function){
                    if(ASSIGN() != null){
                        code.addCode(exp().eval(code, function), "_"+ID().getText(), function);
                    }
                    else if (PLASSIGN() != null){
                        code.addCode("_"+ID().getText()+"+"+exp().eval(code, function), "_"+ID().getText(), function);
                    }
                    else if (MINASSIGN() != null){
                        code.addCode("_"+ID().getText()+"-"+exp().eval(code, function), "_"+ID().getText(), function);
                    }
                    else if (MULTASSIGN() != null){
                        code.addCode("_"+ID().getText()+"*"+exp().eval(code, function), "_"+ID().getText(), function);
                    }
                    else if (DIVASSIGN() != null){
                        code.addCode("_"+ID().getText()+"/"+exp().eval(code, function), "_"+ID().getText(), function);
                    }
                    return null;
                }
                
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(ID);
			setState(107);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ASSIGN) | (1L << PLASSIGN) | (1L << MINASSIGN) | (1L << MULTASSIGN) | (1L << DIVASSIGN))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(108);
			exp(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RetContext extends EvaluableParserRuleContext {
		public TerminalNode RETURN() { return getToken(tp2Parser.RETURN, 0); }
		public TerminalNode SCOLON() { return getToken(tp2Parser.SCOLON, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public RetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ret; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).enterRet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp2Listener ) ((tp2Listener)listener).exitRet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tp2Visitor ) return ((tp2Visitor<? extends T>)visitor).visitRet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RetContext ret() throws RecognitionException {
		RetContext _localctx = new RetContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ret);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(RETURN);
			setState(112);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << NOT) | (1L << INT) | (1L << FLOAT) | (1L << ID) | (1L << CHAR))) != 0)) {
				{
				setState(111);
				exp(0);
				}
			}

			setState(114);
			match(SCOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
